# benchmarks

./: .gitignore  LICENSE.md  README.md
cpp/: CMakeLists.txt
cpp/src/: cppdopri.cpp  cppdopri.h  elements.cpp  elements.h  kepler.cpp  kepler.h  lambert.cpp  lambert.h  main.cpp
fortran/: CMakeLists.txt
fortran/src/: elements.f90  fdopri.f90  kepler.f90  lambert.f90  main.f90  newton.f90
java/native/: CMakeLists.txt  com_helgeeichhorn_icatt_Dopri.h  jdopri.c
java/src/com/helgeeichhorn/icatt/: Benchmark.java  Dopri.java  Elements.java  ElementsFast.java  Gravity.java  Kepler.java  KeplerFunctional.java  Lambert.java  LambertFast.java  Main.java  Newton.java  NewtonFunctional.java
julia/: ICATT.jl  dopri.jl  elements.jl  juliadata.txt  kepler.jl  lambert.jl  main.jl
lib/dopri/: CMakeLists.txt  dopri.f90  dopri.h
matlab/: .gitignore  CMakeLists.txt  benchmark.m  c2.m  c3.m  elements.m  gravity.m  lambert.m  mean2ecc.m  newton.m  period.m  propagator.c  propagator.f90  propagator_module.f90  proptest.m
matlab/icatt_matlab/icatt_matlab.xcodeproj/: project.pbxproj
matlab/icatt_matlab/icatt_matlab.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
matlab/icatt_matlab/icatt_matlab.xcodeproj/project.xcworkspace/xcuserdata/helge.xcuserdatad/: UserInterfaceState.xcuserstate
matlab/icatt_matlab/icatt_matlab.xcodeproj/xcuserdata/helge.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
matlab/icatt_matlab/icatt_matlab.xcodeproj/xcuserdata/helge.xcuserdatad/xcschemes/: debug.xcscheme
python/: _dopri.c  main.py
python/icatt/: build_dopri.py  dopri.py  elements.py  kepler.py  lambert.py
